--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -98,6 +98,7 @@
     <!--The behaviors packages past 11.1.0.4 break our middle click to close functionality, so we're staying on that package for now.-->
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.1.0.4" />
     <PackageReference Include="DialogHost.Avalonia" Version="0.9.2" />
+    <PackageReference Include="Emik.Rubbish" Version="1.1.0" />
     <PackageReference Include="HaroohieClub.DotNet.Bundle" Version="1.0.3" />
     <PackageReference Include="Markdown.Avalonia" Version="11.0.2" />
     <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
