--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -70,7 +70,7 @@ jobs:
         with:
           image: devkitpro/devkitarm:latest
           options: -v ${{ github.workspace }}:/work -w /work
-          run: tar -czvf devkitarm.tar.gz /opt/devkitpro/devkitARM
+          run: tar -czvf devkitarm.tar.gz /opt/devkitpro/
       - name: Publish devkitARM tarball
         uses: actions/upload-artifact@v4
         with:
