Switch test reporter

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,10 +4,6 @@ on:
   pull_request:
     branches: [ 'main' ]
 
-permissions:
-  contents: read
-  checks: write
-
 jobs:
   build-and-test:
     strategy:
@@ -37,10 +33,9 @@ jobs:
       - name: Build
         run: dotnet build src/SerialLoops/SerialLoops.csproj -f ${{ matrix.platform.tfm }}
       - name: test
-        run: dotnet test test/SerialLoops.Tests.Headless/SerialLoops.Tests.Headless.csproj -f ${{ matrix.platform.tfm }} --logger:"trx"
-      - name: Dotnet Test Reporter
-        uses: bibipkins/dotnet-test-reporter@v1.5.1
+        run: dotnet test test/SerialLoops.Tests.Headless/SerialLoops.Tests.Headless.csproj -f ${{ matrix.platform.tfm }} --logger:"trx;LogFileName=TestResults.trx"
+      - uses: actions/upload-artifact@v4
+        if: success() || failure()
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          comment-title: 'Unit Test Results'
-          results-path: ./**/TestResults/*.trx
+          name: test-results-${{ matrix.platform.rid }}
+          path: test/SerialLoops.Tests.Headless/TestResults/TestResults.trx
