Fixup Linux tests, don't fail fast

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,23 +9,11 @@ jobs:
     strategy:
       matrix:
         platform: [ { rid:  'win-x64', vm: 'windows-latest', tfm: 'net8.0-windows' },  { rid: 'osx-arm64', vm: 'macos-latest', tfm: 'net8.0' }, { rid: 'linux-x64', vm: 'ubuntu-latest', tfm: 'net8.0' } ]
+      fail-fast: false
     runs-on: ${{ matrix.platform.vm }}
     steps:
       - name: Check out Serial Loops
         uses: actions/checkout@v4
-      - name: Check out SDL
-        uses: actions/checkout@v4
-        with:
-          repository: 'libsdl-org/SDL'
-          ref: release-2.32.x
-          path: SDL
-        if: ${{ matrix.platform.vm == 'macos-latest' }}
-      - name: SDL cmake configure
-        run: pushd ${{ github.workspace }}/SDL && cmake -S . -B build -DSDL_SHARED=ON -DCMAKE_SYSTEM_NAME=Darwin -DCMAKE_OSX_ARCHITECTURES="arm64" && popd
-        if: ${{ matrix.platform.vm == 'macos-latest' }}
-      - name: SDL cmake build
-        run: pushd ${{ github.workspace }}/SDL && cmake --build build && popd
-        if: ${{ matrix.platform.vm == 'macos-latest' }}
       - name: Setup .NET
         uses: actions/setup-dotnet@v4.1.0
         with:
