--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -60,7 +60,7 @@ modules:
     sources:
       - type: git
         url: https://github.com/jonko0493/SerialLoops.git
-        branch: main
+        branch: FixupFlatpak
       - ./nuget-sources.json
       - type: patch
         path: patches/sandbox.patch
