--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -79,22 +79,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.3.999-cibuild0055319-alpha" />
-    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.999-cibuild0055319-alpha" />
-    <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.2.999-cibuild0046261-alpha" />
+    <PackageReference Include="Avalonia" Version="11.3.3" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.3" />
+    <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.1.5" />
     <PackageReference Include="Avalonia.Controls.PanAndZoom" Version="11.3.0" />
     <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.1.1" />
-    <PackageReference Include="Avalonia.Controls.ColorPicker" Version="11.3.999-cibuild0055319-alpha" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.3.999-cibuild0055319-alpha" />
-    <PackageReference Include="Avalonia.Labs.Controls" Version="11.3.999-cibuild-00055312" />
-    <PackageReference Include="Avalonia.Labs.Panels" Version="11.3.999-cibuild-00055312" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.999-cibuild0055319-alpha" />
-    <PackageReference Include="Avalonia.Skia" Version="11.3.999-cibuild0055319-alpha" />
+    <PackageReference Include="Avalonia.Controls.ColorPicker" Version="11.3.3" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.3.3" />
+    <PackageReference Include="Avalonia.Labs.Controls" Version="11.3.0" />
+    <PackageReference Include="Avalonia.Labs.Panels" Version="11.3.0" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.3" />
+    <PackageReference Include="Avalonia.Skia" Version="11.3.3" />
     <PackageReference Include="Avalonia.Svg" Version="11.3.0" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.999-cibuild0055319-alpha" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.999-cibuild0055319-alpha" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.3" />
+    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.3" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.3.999-cibuild0055319-alpha" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.3.3" />
     <!--The behaviors packages past 11.1.0.4 break our middle click to close functionality, so we're staying on that package for now.-->
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.3.0.6" />
     <PackageReference Include="DialogHost.Avalonia" Version="0.9.3" />
