--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -120,7 +120,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\submodules\NitroPacker\HaroohieClub.NitroPacker.SymTableHelper\HaroohieClub.NitroPacker.SymTableHelper.csproj" />
+    <ProjectReference Condition="'$(Configuration)' != 'Release'" Include="..\..\submodules\NitroPacker\HaroohieClub.NitroPacker.SymTableHelper\HaroohieClub.NitroPacker.SymTableHelper.csproj" />
     <ProjectReference Include="..\SerialLoops.Lib\SerialLoops.Lib.csproj" />
   </ItemGroup>
 
