--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodules/NitroPacker"]
-	path = submodules/NitroPacker
-	url = https://github.com/haroohie-club/NitroPacker
+[submodule "submodules/NitroPacker.SymTableHelper"]
+	path = submodules/NitroPacker.SymTableHelper
+	url = https://github.com/haroohie-club/NitroPacker.SymTableHelper.git
